--- a/amzingplacearoungtheworld.html
+++ b/amzingplacearoungtheworld.html
@@ -41,7 +41,7 @@
       
       <div class="slide slide6">
         <div class="slide-content">
-          <img src="WOW/WOW.logo.png"/><span>Country</span>
+          <img src="img/WOW.logo.png"/><span>Country</span>
          </div>
       </div>
     </div>
