--- a/animals.html
+++ b/animals.html
@@ -40,7 +40,7 @@
       
       <div class="slide slide4">
         <div class="slide-content">
-          <img src="WOW/WOW.logo.png"/><span>Animals</span>
+          <img src="img/WOW.logo.png"/><span>Animals</span>
          </div>
       </div>
     </div>
