--- a/space.html
+++ b/space.html
@@ -44,7 +44,7 @@
       
       <div class="slide slide2">
         <div class="slide-content">
-          <img src="WOW/WOW.logo.png"/><span>Space</span>
+          <img src="img/WOW.logo.png"/><span>Space</span>
          </div>
       </div>
     </div>
