--- a/healthy.html
+++ b/healthy.html
@@ -42,7 +42,7 @@
       
       <div class="slide slide5">
         <div class="slide-content">
-          <img src="WOW/WOW.logo.png"/><span>Health</span>
+          <img src="img/WOW.logo.png"/><span>Health</span>
           </div>
       </div>
     </div>
