--- a/histrory.html
+++ b/histrory.html
@@ -42,7 +42,7 @@
       
       <div class="slide slide7">
         <div class="slide-content">
-          <img src="wow/WOW.logo.png"><span>History</span>
+          <img src="img/WOW.logo.png"><span>History</span>
          </div>
       </div>
     </div>
