--- a/amzingplacearoungtheworld.html
+++ b/amzingplacearoungtheworld.html
@@ -47,7 +47,7 @@
     </div>
   </div>
   <div class="icon-bar">
-    <a href="file:///C:/Users/CTT-PC/Desktop/index.html" class="home"><i class="far fa-home"></i></a>  
+    <a href="index.html" class="home"><i class="far fa-home"></i></a>  
     <a href="#" class="return"><i class="fal fa-undo"></i></a>  
     <a href="https://www.instagram.com/w.o.w.education/" class="instagram"><i class="fab fa-instagram"></i></a> 
     <a href="https://www.pinterest.com/WOWedu2021/_saved/" class="pinterest"><i class="fab fa-pinterest-p"></i></a>
